--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         </div>
 
         <ul>
-            <li> <a href="#"> Menu </a> </li>
-            <li> <a href="#"> Suas Compras </a> </li>
-            <li> <a href="#"> Genêros </a> </li>
-            <li> <a href="#">  Ajuda </a> </li>
-            <li> <a href="#"> Contato </a> </li>
+            <li> <a href="#">Drama</a> </li>
+            <li> <a href="#">Ficção</a> </li>
+            <li> <a href="#">Romance</a> </li>
+            <li> <a href="#">Científico</a> </li>
+            
         </ul>
 
     </nav>
@@ -33,5 +33,6 @@
            </div>
         </div>
     </section>
-</body>
+    <footer>
+        <img src="" alt="">
 </html>
