--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="imagem">
                 <img src="picture/Pedro.png" alt="Pedro">
                 <br>
-                <p id="img">Pedro Henrique</p>
+                <p id="img">Pedro Henrique e Técnico em Lógistica</p>
                 <p id="img">Dev Front-End</p>
             </div>
             <div class="imagem">
