--- a/romance.html
+++ b/romance.html
@@ -68,7 +68,7 @@
                 <img src="picture/Pedro.png" alt="Pedro">
                 <br>
                 <p id="img">Pedro Henrique</p>
-                <p id="img">Dev Front-End</p>
+                <p id="img">Dev Front-End e Técnico em Lógistica</p>
             </div>
             <div class="imagem">
                 <img src="picture/Jaque.png" alt="Jaque">
